# laplace

./: CMakeLists.txt  README.md  bin_to_text.py  compute_next.cu  cuda_helper.h  exchange_halo.cpp  iter_kernel.cu  laplace.cpp  set_bdry.cpp
